--- a/package.json
+++ b/package.json
@@ -29,5 +29,6 @@
     "nodemailer-mailgun-transport": "^2.1.3",
     "nodemailer-smtp-transport": "^2.7.4",
     "path": "^0.12.7"
-  }
+  },
+  "devDependencies": {}
 }
