--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "author": "Tara McGonigle",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.0.1",
+    "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^5.1.3",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.0",
@@ -29,6 +30,5 @@
     "nodemailer-mailgun-transport": "^2.1.3",
     "nodemailer-smtp-transport": "^2.7.4",
     "path": "^0.12.7"
-  },
-  "devDependencies": {}
+  }
 }
